fix spacing in form column

--- a/intro-component-with-signup-form/scss/main.scss
+++ b/intro-component-with-signup-form/scss/main.scss
@@ -95,7 +95,7 @@ a {
 
 .offer {
 	background-color: var(--clr-accent);
-	padding: 1.4rem 0;
+	padding: 1.2rem 0;
 	border-radius: 10px;
 	text-align: center;
 	box-shadow: 0 8px 0 rgba(#000, 0.1);
@@ -254,6 +254,10 @@ a {
 
 		&__field {
 			margin-bottom: 1.25rem;
+		}
+
+		&__input {
+			padding: 1rem 1.5rem;
 		}
 	}
 }
